ajustes pontuais de layout, criação das pipes de pesquisa nas tabelas, criação da integração da api, ajustes do layout da pagina de erro

--- a/jt-eventos/src/app/components/event-types/event-types-table/event-types-table.component.html
+++ b/jt-eventos/src/app/components/event-types/event-types-table/event-types-table.component.html
@@ -1,44 +1,48 @@
 <div class="btn-toolbar" role="toolbar">
-  <div class="btn-group me-2" role="group">
-    <button class="btn btn-outline-primary" (click)="createEventType()">
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
-      </svg>&nbsp;
-      Cadastrar
-    </button>
-  </div>
+  <button class="btn btn-outline-primary" routerLink="create">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+      <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
+    </svg>&nbsp;
+    Cadastrar
+  </button>
 
   <h1 class="position-absolute start-50 translate-middle-x">{{ title }}</h1>
 </div>
 
 <hr />
 
-<form>
-	<div class="mb-3 row">
-		<label for="table-filtering-search" class="col-xs-3 col-sm-auto col-form-label">Pesquisar:</label>
-		<div class="col-xs-3 col-sm-auto">
-			<input id="table-filtering-search" class="form-control" type="text" [formControl]="filter" />
-		</div>
-	</div>
-</form>
+<div *ngIf="list.length > 0">
+  <form>
+    <div class="mb-3 row">
+      <label for="table-filtering-search" class="col-xs-3 col-sm-auto col-form-label">Pesquisar:</label>
+      <div class="col-xs-3 col-sm-auto">
+        <input id="table-filtering-search" class="form-control" type="text" [(ngModel)]="searchField" />
+      </div>
+    </div>
+  </form>
 
-<table class="table table-hover">
-	<thead>
-		<tr>
-			<th scope="col">Descrição</th>
-			<th scope="col"></th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr *ngFor="let eventType of eventTypes$ | async; index as i">
-			<td><ngb-highlight [result]="eventType.description" [term]="filter.value"></ngb-highlight></td>
-			<td>
-				<a class="a-table" (click)="detailEventType()">
-					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-						<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-					</svg>
-				</a>
-			</td>
-		</tr>
-	</tbody>
-</table>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Descrição</th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let eventType of list"> <!-- | eventTypeLookup: searchField -->
+        <td>{{ eventType.description }}</td>
+        <td>
+          <a class="a-table" routerLink="details/{{ eventType._id }}">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+            </svg>
+          </a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<div *ngIf="list.length <= 0">
+  <p>Não há {{ title }} cadastrados</p>
+</div>
