--- a/jt-eventos/src/app/components/page-not-found/page-not-found.component.html
+++ b/jt-eventos/src/app/components/page-not-found/page-not-found.component.html
@@ -1,1 +1,14 @@
-<p>page-not-found works!</p>
+<div class="home">
+  <h1 class="title text-center">Ops... algo deu errado!</h1>
+  <p>Parace que a página que você tentou acessar não existe.</p>
+
+  <br />
+
+  <div class="d-grid gap-2 col-6 mx-auto" role="group">
+    <button class="btn btn-light" routerLink="">
+      Voltar para a página inicial
+    </button>
+  </div>
+
+  <img src="../assets/jt-eventos.png" width="500" alt="Logo JT Eventos" />
+</div>
