--- a/jt-eventos/src/app/components/users/users-details/users-details.component.html
+++ b/jt-eventos/src/app/components/users/users-details/users-details.component.html
@@ -1,4 +1,4 @@
-<div class="modal-header">
+<!-- <div class="modal-header">
   <h5 class="modal-title" id="modal-basic-title">{{ title }}</h5>
   <button type="button" class="btn-close" aria-label="Close" (click)="activeModal.dismiss('Cross click')"></button>
 </div>
@@ -30,4 +30,44 @@
     </svg>&nbsp;
     Editar
   </button>
+</div> -->
+
+<div class="btn-toolbar" role="toolbar">
+  <button class="btn btn-outline-dark" routerLink="users">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+      <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" />
+    </svg>
+    Voltar
+  </button>
+
+    <button type="button" class="btn btn-outline-primary" routerLink="edit/{}">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+      <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
+    </svg>&nbsp;
+    Editar
+  </button>
+
+  <h1 class="position-absolute start-50 translate-middle-x">{{ title }}</h1>
+</div>
+
+<hr />
+
+<div class="row">
+  <div class="g-1 mx-auto">
+    <div class="row no-gutters">
+      <div class="col-4">
+        <strong>
+          <p>Tipo de usuário:</p>
+          <p>Nome:</p>
+          <p>Usuário:</p>
+        </strong>
+      </div>
+
+      <div class="col-8">
+        <p>Administrador</p>
+        <p>Thiago</p>
+        <p>thiago_user</p>
+      </div>
+    </div>
+  </div>
 </div>
