--- a/jt-eventos/src/app/components/events/events-details/events-details.component.html
+++ b/jt-eventos/src/app/components/events/events-details/events-details.component.html
@@ -1,4 +1,4 @@
-<div class="modal-header">
+<!-- <div class="modal-header">
   <h5 class="modal-title" id="modal-basic-title">{{ title }}</h5>
   <button type="button" class="btn-close" aria-label="Close" (click)="activeModal.dismiss('Cross click')"></button>
 </div>
@@ -63,6 +63,81 @@
     </svg>&nbsp;
     Excluir
   </button>
+</div> -->
+
+<div class="btn-toolbar" role="toolbar">
+  <button class="btn btn-outline-dark" routerLink="events">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+      <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" />
+    </svg>
+    Voltar
+  </button>
+
+    <button type="button" class="btn btn-outline-primary" routerLink="edit/{}">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+      <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
+    </svg>&nbsp;
+    Editar
+  </button>
+
+  <button class="btn btn-outline-danger" (click)="openDelete()">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+      <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z" />
+    </svg>&nbsp;
+    Excluir
+  </button>
+
+  <button class="btn btn-outline-dark" printTitle="JT Eventos" printSectionId="report" [useExistingCss]="true" ngxPrint>
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-printer" viewBox="0 0 16 16">
+      <path d="M2.5 8a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1z" />
+      <path d="M5 1a2 2 0 0 0-2 2v2H2a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h1v1a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-1h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1V3a2 2 0 0 0-2-2H5zM4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H4V3zm1 5a2 2 0 0 0-2 2v1H2a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v-1a2 2 0 0 0-2-2H5zm7 2v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z" />
+    </svg>&nbsp;
+    Imprimir
+  </button>
+
+  <h1 class="position-absolute start-50 translate-middle-x">{{ title }}</h1>
+</div>
+
+<hr />
+
+<div class="row">
+  <div class="g-1 mx-auto">
+    <div class="row no-gutters">
+      <div class="col-4">
+        <strong>
+          <p>Tipo de Evento:</p>
+          <p>Cliente:</p>
+          <p>Estabelecimento:</p>
+          <p>Descrição:</p>
+          <p>Datas:</p>
+        </strong>
+      </div>
+
+      <div class="col-8">
+        <p>Casamento</p>
+        <p>Jonas Pohlmann</p>
+        <p>Salão Gotas de Prata</p>
+        <p>Casamento Luzia</p>
+        <p>03/02/2023 à 04/02/2023</p>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="form-group">
+      <strong><label class="control-label">Lista de convidados:</label></strong>
+      <br>
+      <ul>
+        <label class="control-label">
+          <li>Thiago</li>
+          <li>Roberto</li>
+          <li>Bruna</li>
+          <li>Salem</li>
+          <li>Lorena</li>
+        </label>
+      </ul>
+    </div>
+  </div>
 </div>
 
 <!-- Dados para impressão do relatório -->
