--- a/jt-eventos/src/app/components/customers/customers-table/customers-table.component.html
+++ b/jt-eventos/src/app/components/customers/customers-table/customers-table.component.html
@@ -16,7 +16,7 @@
     <div class="mb-3 row">
       <label for="table-filtering-search" class="col-xs-3 col-sm-auto col-form-label">Pesquisar:</label>
       <div class="col-xs-3 col-sm-auto">
-        <input id="table-filtering-search" class="form-control" type="text" [(ngModel)]="searchField" />
+        <input id="table-filtering-search" class="form-control" type="text" [(ngModel)]="searchField"  [ngModelOptions]="{standalone: true}" />
       </div>
     </div>
   </form>
@@ -32,7 +32,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let customer of list"> <!-- | customerLookup: searchField -->
+      <tr *ngFor="let customer of list | customerLookup: searchField">
         <td>{{ customer.name }}</td>
         <td>{{ customer.cpf }}</td>
         <td>{{ customer.email }}</td>
@@ -50,5 +50,8 @@
 </div>
 
 <div *ngIf="list.length <= 0">
-  <p>Não há {{ title }} cadastrados</p>
+  <br />
+  <ngb-alert [dismissible]="false">
+		<p>Não há {{ title }} cadastrados</p>
+	</ngb-alert>
 </div>
