--- a/jt-eventos/src/app/components/establishments/establishments-table/establishments-table.component.html
+++ b/jt-eventos/src/app/components/establishments/establishments-table/establishments-table.component.html
@@ -16,7 +16,7 @@
     <div class="mb-3 row">
       <label for="table-filtering-search" class="col-xs-3 col-sm-auto col-form-label">Pesquisar:</label>
       <div class="col-xs-3 col-sm-auto">
-        <input id="table-filtering-search" class="form-control" type="text" [(ngModel)]="searchField" />
+        <input id="table-filtering-search" class="form-control" type="text" [(ngModel)]="searchField"  [ngModelOptions]="{standalone: true}" />
       </div>
     </div>
   </form>
@@ -30,7 +30,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let establishment of list"> <!-- | establishmentLookup: searchField -->
+      <tr *ngFor="let establishment of list | establishmentLookup: searchField">
         <td>{{ establishment.description }}</td>
         <td>{{ establishment.street }}, {{ establishment.streetNumber }}, {{ establishment.streetComplement }}, {{ establishment.neighborhood }} - {{ establishment.city }}/{{ establishment.state }}, CEP: {{ establishment.cep }}</td>
         <td>
@@ -46,5 +46,8 @@
 </div>
 
 <div *ngIf="list.length <= 0">
-  <p>Não há {{ title }} cadastrados</p>
+  <br />
+  <ngb-alert [dismissible]="false">
+		<p>Não há {{ title }} cadastrados</p>
+	</ngb-alert>
 </div>
