--- a/jt-eventos/src/app/components/users/users-table/users-table.component.html
+++ b/jt-eventos/src/app/components/users/users-table/users-table.component.html
@@ -18,7 +18,7 @@
     <div class="mb-3 row">
       <label for="table-filtering-search" class="col-xs-3 col-sm-auto col-form-label">Pesquisar:</label>
       <div class="col-xs-3 col-sm-auto">
-        <input id="table-filtering-search" class="form-control" type="text" [(ngModel)]="searchField" />
+        <input id="table-filtering-search" class="form-control" type="text" [(ngModel)]="searchField" [ngModelOptions]="{standalone: true}" />
       </div>
     </div>
   </form>
@@ -33,7 +33,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let user of list"> <!-- | userLookup: searchField -->
+      <tr *ngFor="let user of list | userLookup: searchField">
         <td>{{ user.name }}</td>
         <td>{{ user.username }}</td>
         <td>{{ user.role }}</td>
@@ -50,5 +50,8 @@
 </div>
 
 <div *ngIf="list.length <= 0">
-  <p>Não há {{ title }} cadastrados</p>
+  <br />
+  <ngb-alert [dismissible]="false">
+		<p>Não há {{ title }} cadastrados</p>
+	</ngb-alert>
 </div>
